fix text alignment

--- a/assets/css/pages/form.scss
+++ b/assets/css/pages/form.scss
@@ -69,12 +69,14 @@
     .col-lg-4,.col-lg-3 {
         label {
             float: right;
+            text-align: right;
         }
     }
     @media (max-width: $navbar-breaksize) {
         .col-lg-4,.col-lg-3 {
             label {
                 float: none;
+                text-align: left;
             }
         }
     }
